corpus/01-basics.txt
==================
Variable Assignment
==================
  set apples=8
  set total=apples
  set a="Then, "
---
(program
  (assignment
    (local_variable)
    (literal)
  )
  (assignment
    (local_variable)
    (local_variable)
  )
  (assignment
    (local_variable)
    (literal)
  )
)
==================
Global Variables
==================
  set ^apples=8
  set pears=7
---
(program
  (assignment
    (global_variable)
    (literal)
  )
  (assignment
    (local_variable)
    (literal)
  )
)
==================
Comments
==================
  set apples=8
  ; Set apples
  set pears=9 ; Set pears
---
(program
  (assignment
    (local_variable)
    (literal)
  )
  (comment)
  (assignment
    (local_variable)
    (literal)
  )
  (comment)
)
==================
Call Write
==================
  write "There were 8",!
---
(program
  (call
    (function)
    (arguments
      (literal)
    )
  )
)
==================
Arithmetic
==================
  set apples=7
  set pears=3+8
  set fruits=apples+pears
  set price=2
  set revenue=price*fruits
---
(program
  (assignment
    (local_variable)
    (literal)
  )
  (assignment
    (local_variable)            
    (binary_expression
      (literal)
      (literal)
    )
  )
  (assignment
    (local_variable)            
    (binary_expression
      (local_variable)
      (local_variable)
    )
  )
  (assignment
    (local_variable)
    (literal)
  )
  (assignment
    (local_variable)            
    (binary_expression
      (local_variable)
      (local_variable)
    )
  )
)
==================
Conditionals
==================
  set abc=70
  if abc=70 set f=1
---
(program
  (assignment
    (local_variable)
    (literal))
  (if_statement
    (conditional
      (binary_expression
        (local_variable)
        (literal)))
    (assignment
      (local_variable)
      (literal))))
==================
1d Arrays
==================
; unidimensional array

  write "Approaching the solar system:",!

  set planets()="Mercury"
  set planets()="Venus"
  set planets()="Earth"
---
(program
  (comment)
  (call
    (function)
    (arguments
      (literal)))
  (assignment
    (local_array)
    (literal))
  (assignment
    (local_array)
    (literal))
  (assignment
    (local_array)
    (literal))
